--- a/ACS.css
+++ b/ACS.css
@@ -66,3 +66,22 @@ hr
         height: 1px;
     }
 }
+
+@media (max-width: 400px)
+{
+    p
+    {
+        font-size: 30px;
+    }
+
+    .ecole
+    {
+        letter-spacing: 30px;
+    }
+
+    hr
+    {
+        width: 76%;
+    
+    }
+}
